fix size of table select on mobile, remove extra grid lines, fix search box icon alignment

--- a/styles.css
+++ b/styles.css
@@ -20,14 +20,14 @@ body {
 .index-grid-container {
   display: grid;
   grid-template-rows: 68px auto auto 40px;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: 1fr 4fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
   height: 100vh;
 }
 
 .index-nav-column {
-  grid-area: 1 / 1 / 2 / 6;
+  grid-area: 1 / 1 / 2 / 3;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -37,13 +37,13 @@ body {
 }
 
 .index-display-column {
-  grid-area: 2 / 1 / 4 / 6;
+  grid-area: 2 / 1 / 4 / 3;
   background-color: var(--main-bg-color);
   padding: 0 3px 0.5rem;
 }
 
 .index-footer {
-  grid-area: 4 / 1 / 5 / 6;
+  grid-area: 4 / 1 / 5 / 3;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -76,6 +76,11 @@ form.search-container {
   position: relative;
 }
 
+.search-container label {
+  display: flex;
+  align-items: center;
+}
+
 input#facId {
   width: 60%;
   background-color: #303030;
@@ -87,6 +92,7 @@ input#facId {
   font-size: 18px;
   text-align: center;
   caret-color: transparent;
+  align-items: center;
 }
 
 input#facId:focus,
@@ -146,10 +152,6 @@ input#facId::-moz-focus-inner {
   display: flex;
   justify-content: center;
   width: 100%;
-}
-
-.search-container label {
-  display: flex;
 }
 
 /* Front page content */
@@ -380,11 +382,11 @@ nav#table-select {
 nav#table-select button {
   padding: 0.5rem 0;
   -moz-box-flex: 1;
-  flex: 1 1 auto;
-  font-size: 1.25rem;
+  flex: 1 1 33%;
+  font-size: 1rem;
   border: none;
-  margin: 0 0.2rem;
-  color: white;
+  margin: 0;
+  color: var(--text-color);
   background-color: var(--main-bg-color);
 }
 
@@ -431,7 +433,7 @@ nav#table-select button:focus {
   }
 
   .index-display-column {
-    grid-area: 1 / 2 / 4 / 6;
+    grid-area: 1 / 2 / 4 / 3;
   }
 
   #search-box {
@@ -470,6 +472,11 @@ nav#table-select button:focus {
   #modal {
     min-width: 240px;
     max-width: 25%;
+  }
+
+  nav#table-select button {
+    font-size: 1.25rem;
+    margin: 0 0.2rem;
   }
 
   #map-container iframe {
